jv-team/portal-for-patients-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-for-patients-webapi
spec:
  replicas: 2
  selector:
      matchLabels:
        pod: portal-for-patients-webapi-label
  template:
      metadata:
        labels:
          pod: portal-for-patients-webapi-label
      spec:
        containers:
        - name: portal-for-patients-webapi-container
          image: thejakey/portal-for-patients-webapi:1.0.0-52
          imagePullPolicy: Always
          ports:
          - name: webapi-port
            containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
