jv-team/portal-for-patients-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: portal-for-patients-webapi
spec:
  type: ClusterIP
  selector:
    pod: portal-for-patients-webapi-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
